# rust-adjacent-pair-iterator

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
.github/workflows/: ci.yaml
src/: lib.rs  test_helpers.rs
src/test_helpers/: iterator.rs  string.rs
tests/: readme_example.rs
