[package]
name = "adjacent-pair-iterator"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2018"
license = "ISC"
homepage = "https://github.com/FSMaxB/rust-pair-iterator"
repository = "https://github.com/FSMaxB/rust-pair-iterator"
keywords = ["iterator", "iter", "pair", "adjacent"]
description = "An iterator over adjacent pairs in another iterator."
readme = "README.md"

[dependencies]
