[package]
name = "adjacent-pair-iterator"
version = "1.0.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2018"
license = "ISC"
homepage = "https://github.com/FSMaxB/rust-adjacent-pair-iterator"
repository = "https://github.com/FSMaxB/rust-adjacent-pair-iterator"
keywords = ["iterator", "iter", "pair", "adjacent", "no-std"]
description = "An iterator over adjacent pairs in another iterator."
readme = "README.md"
rust-version = "1.31"

[dependencies]
